Make Button to set emergency numbers
I made a button in the main - Home activity which asked the user to set
his emergency numbers in red color text. If the numebers are already
set then the text color will be green and the promt will be change the
already set number.

Signed-off-by: Aditya Prasad <adityaprasadiskool@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">SmartHelmet</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="emergency">Set Emergency Contact Numbers</string>
 
 </resources>
