--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="emergency">Set Emergency Contact Numbers</string>
+    <string name="title_activity_edit_emergency_number">EditEmergencyNumber</string>
+    <string name="no1">Number - 1</string>
+    <string name="no2">Number - 2</string>
+    <string name="no3">Number - 3</string>
+    <string name="emergencyhead">EMERGENCY NUMBERS</string>
+    <string name="save">Save</string>
+
+
 
 </resources>
