--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="emergency">Set Emergency Contact Numbers</string>
-    <string name="title_activity_edit_emergency_number">EditEmergencyNumber</string>
+    <string name="title_activity_edit_emergency_number">Emergency Numbers</string>
     <string name="no1">Number - 1</string>
     <string name="no2">Number - 2</string>
     <string name="no3">Number - 3</string>
