--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,10 @@
     <string name="no1">Number - 1</string>
     <string name="no2">Number - 2</string>
     <string name="no3">Number - 3</string>
-    <string name="emergencyhead">EMERGENCY NUMBERS</string>
+    <string name="emergency_head">EMERGENCY NUMBERS</string>
     <string name="save">Save</string>
-
-
+    <string name="start_navigate">Start Journey</string>
+    <string name="home_heading">Smart Helmet</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
