--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,11 @@
     <string name="no3">Number - 3</string>
     <string name="emergency_head">EMERGENCY NUMBERS</string>
     <string name="save">Save</string>
+    <string name="enable">Enable</string>
     <string name="start_navigate">Start Journey</string>
     <string name="home_heading">Smart Helmet</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_set_destination">SetDestination</string>
+    <string name="start">START</string>
 
 </resources>
