--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SmartHelmet</string>
+    <string name="app_name">Smart Bike</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="emergency">Set Emergency Contact Numbers</string>
@@ -17,5 +17,12 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_set_destination">SetDestination</string>
     <string name="start">START</string>
+    <string name="title_activity_registration">Registration</string>
+    <string name="next">Next</string>
+    <string name="phoneno">Enter your phone number</string>
+    <string name="onetime">One Time Registration</string>
+    <string name="title_activity_name_blood_group">NameBloodGroup</string>
+    <string name="bloodgroup">Enter your Blood Group</string>
+    <string name="name">Enter your name</string>
 
 </resources>
