--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,8 @@
     <string name="title_activity_name_blood_group">NameBloodGroup</string>
     <string name="bloodgroup">Enter your Blood Group</string>
     <string name="name">Enter your name</string>
+    <string name="title_activity_show_profile">Profile</string>
+    <string name="showprofile">Show Profile</string>
+    <string name="title_activity_fuel_details">Fuel Console</string>
 
 </resources>
