Adding the graph functionality
Vishnu worked on the achartengine library and got a proper graph
functionality, it fetches the latest values from the database and draws
a fully functional graph.

Signed-off-by: Aditya Prasad <adityaprasadiskool@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="title_activity_show_profile">Profile</string>
     <string name="showprofile">Show Profile</string>
     <string name="title_activity_fuel_details">Fuel Console</string>
+    <string name="title_activity_bargraph_display">Bar Graph</string>
 
 </resources>
